<resources>
    <string name="app_name">DeepClass</string>
    <string name="btn_go2Qustion">答题</string>
    <string name="btn_go2Ask">出题</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qst_list_null">当前没有试题</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="_00_00">00:00</string>
    <string name="sta">开始</string>
    <string name="reset">重置</string>
    <string name="fangqi">放弃</string>
    <string name="啊">开始</string>
    <string name="hh">选择时长</string>
    <string name="_30_00">30:00</string>
    <string name="shicha">选择时长为:</string>
    <string name="string_shicha">选择时长为30:00</string>
    <string name="mtStudyTime">你已经学习的时间为：</string>
    <string name="bottom_class">课程</string>
    <string name="bottom_create">添加签到</string>
    <string name="bottom_time_master">时间管理</string>
    <string name="bottom_person">个人中心</string>
    <string name="check">签到</string>
    <string name="check_tea">删除学生</string>
    <string name="start1">开启位置签到</string>
    <string name="start2">开启人脸签到</string>
    <string name="practice">练习</string>
    <string name="practice_tea">查询学生</string>
    <string name="discuss">发布练习</string>
    <string name="statistics">统计</string>
    <string name="exit">退出登录</string>
    <string name="check_location">定位签到</string>
    <string name="check_face">人脸签到</string>
    <string name="title_name">Deep Class</string>
    <string name="person_name">老师</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="appname">Animation</string>
    <string name="k">开始</string>
    <string name="ko">播放音乐</string>
    <string name="musicbb">Button</string>
    <string name="todo">TODO</string>
</resources>
